src/parser.output
Terminals unused in grammar

    KEYWORD_STRICT_AS
    KEYWORD_STRICT_BREAK
    KEYWORD_STRICT_CONTINUE
    KEYWORD_STRICT_CRATE
    KEYWORD_STRICT_ENUM
    KEYWORD_STRICT_EXTERN
    KEYWORD_STRICT_FOR
    KEYWORD_STRICT_IMPL
    KEYWORD_STRICT_IN
    KEYWORD_STRICT_LOOP
    KEYWORD_STRICT_MATCH
    KEYWORD_STRICT_MOD
    KEYWORD_STRICT_MOVE
    KEYWORD_STRICT_PUB
    KEYWORD_STRICT_REF
    KEYWORD_STRICT_RETURN
    KEYWORD_STRICT_SELFVALUE
    KEYWORD_STRICT_SELFTYPE
    KEYWORD_STRICT_STATIC
    KEYWORD_STRICT_STRUCT
    KEYWORD_STRICT_SUPER
    KEYWORD_STRICT_TRAIT
    KEYWORD_STRICT_TYPE
    KEYWORD_STRICT_UNSAFE
    KEYWORD_STRICT_USE
    KEYWORD_STRICT_WHERE
    KEYWORD_STRICT_WHILE
    KEYWORD_STRICT_ASYNC
    KEYWORD_STRICT_AWAIT
    KEYWORD_STRICT_DYN
    KEYWORD_RES_ABSTRACT
    KEYWORD_RES_BECOME
    KEYWORD_RES_BOX
    KEYWORD_RES_DO
    KEYWORD_RES_FINAL
    KEYWORD_RES_MACRO
    KEYWORD_RES_OVERRIDE
    KEYWORD_RES_PRIV
    KEYWORD_RES_TYPEOF
    KEYWORD_RES_UNSIZED
    KEYWORD_RES_VIRTUAL
    KEYWORD_RES_YILED
    KEYWORD_RES_TRY
    KEYWORD_WEAK_UNION
    KEYWORD_WEAK_STATICLIFETIME
    KEYWORD_WEAK_DYN
    INCR
    DECR
    NOTOP
    LBRACK
    RBRACK
    DOTDOT
    REFER
    UNDERSCORE
    HASH
    CCONST


State 21 conflicts: 1 shift/reduce


Grammar

    0 $accept: main $end

    1 main: %empty
    2     | funDecr main
    3     | varDec main

    4 ident: ID
    5      | ident DOT ident

    6 if_expr: if_main else_if_expr else_expr

    7 if_main: KEYWORD_STRICT_IF exprs LBRACE block RBRACE

    8 else_expr: %empty
    9          | KEYWORD_STRICT_ELSE LBRACE block RBRACE

   10 else_if_expr: %empty
   11             | else_if_expr KEYWORD_STRICT_ELSE if_main

   12 exprs: expr
   13      | expr ANDOP exprs
   14      | expr OROP exprs

   15 expr: expression EQUOP expr
   16     | expression NEQUOP expr
   17     | expression GT expr
   18     | expression LT expr
   19     | expression GTEQ expr
   20     | expression LTEQ expr
   21     | expression
   22     | KEYWORD_STRICT_TRUE
   23     | KEYWORD_STRICT_FALSE

   24 expression: term MULOP expression
   25           | term DIVOP expression
   26           | term ADDOP expression
   27           | term SUBOP expression
   28           | term

   29 term: ident
   30     | STRING
   31     | FCONST
   32     | ICONST

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN maybeFnReturn LBRACE block RBRACE

   34 param: ident COLON ident

   35 maybeParamList: %empty
   36               | paramList

   37 paramList: param
   38          | paramList COMMA param

   39 maybeFnReturn: %empty
   40              | ARROW ident

   41 funCall: ident LPAREN maybeCallParamList RPAREN

   42 funcCallStmt: funCall SEMI

   43 callParam: ident
   44          | STRING
   45          | FCONST
   46          | ICONST
   47          | funCall

   48 maybeCallParamList: %empty
   49                   | callParamList

   50 callParamList: callParam
   51              | callParamList COMMA callParam

   52 varDec: KEYWORD_STRICT_LET maybeMut ident maybeType maybeAssign SEMI
   53       | KEYWORD_STRICT_CONST ident maybeType maybeAssign SEMI

   54 maybeMut: %empty
   55         | KEYWORD_STRICT_MUT

   56 maybeType: %empty
   57          | COLON ident

   58 maybeAssign: %empty
   59            | ASSIGN var

   60 var: ident
   61    | STRING
   62    | FCONST
   63    | ICONST

   64 block: %empty
   65      | if_expr block
   66      | funcCallStmt block
   67      | varDec block


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEYWORD_STRICT_AS (258)
    KEYWORD_STRICT_BREAK (259)
    KEYWORD_STRICT_CONST (260) 53
    KEYWORD_STRICT_CONTINUE (261)
    KEYWORD_STRICT_CRATE (262)
    KEYWORD_STRICT_ELSE (263) 9 11
    KEYWORD_STRICT_ENUM (264)
    KEYWORD_STRICT_EXTERN (265)
    KEYWORD_STRICT_FALSE (266) 23
    KEYWORD_STRICT_FN (267) 33
    KEYWORD_STRICT_FOR (268)
    KEYWORD_STRICT_IF (269) 7
    KEYWORD_STRICT_IMPL (270)
    KEYWORD_STRICT_IN (271)
    KEYWORD_STRICT_LET (272) 52
    KEYWORD_STRICT_LOOP (273)
    KEYWORD_STRICT_MATCH (274)
    KEYWORD_STRICT_MOD (275)
    KEYWORD_STRICT_MOVE (276)
    KEYWORD_STRICT_MUT (277) 55
    KEYWORD_STRICT_PUB (278)
    KEYWORD_STRICT_REF (279)
    KEYWORD_STRICT_RETURN (280)
    KEYWORD_STRICT_SELFVALUE (281)
    KEYWORD_STRICT_SELFTYPE (282)
    KEYWORD_STRICT_STATIC (283)
    KEYWORD_STRICT_STRUCT (284)
    KEYWORD_STRICT_SUPER (285)
    KEYWORD_STRICT_TRAIT (286)
    KEYWORD_STRICT_TRUE (287) 22
    KEYWORD_STRICT_TYPE (288)
    KEYWORD_STRICT_UNSAFE (289)
    KEYWORD_STRICT_USE (290)
    KEYWORD_STRICT_WHERE (291)
    KEYWORD_STRICT_WHILE (292)
    KEYWORD_STRICT_ASYNC (293)
    KEYWORD_STRICT_AWAIT (294)
    KEYWORD_STRICT_DYN (295)
    KEYWORD_RES_ABSTRACT (296)
    KEYWORD_RES_BECOME (297)
    KEYWORD_RES_BOX (298)
    KEYWORD_RES_DO (299)
    KEYWORD_RES_FINAL (300)
    KEYWORD_RES_MACRO (301)
    KEYWORD_RES_OVERRIDE (302)
    KEYWORD_RES_PRIV (303)
    KEYWORD_RES_TYPEOF (304)
    KEYWORD_RES_UNSIZED (305)
    KEYWORD_RES_VIRTUAL (306)
    KEYWORD_RES_YILED (307)
    KEYWORD_RES_TRY (308)
    KEYWORD_WEAK_UNION (309)
    KEYWORD_WEAK_STATICLIFETIME (310)
    KEYWORD_WEAK_DYN (311)
    ADDOP (312) 26
    SUBOP (313) 27
    MULOP (314) 24
    DIVOP (315) 25
    INCR (316)
    DECR (317)
    OROP (318) 14
    ANDOP (319) 13
    NOTOP (320)
    EQUOP (321) 15
    NEQUOP (322) 16
    GT (323) 17
    LT (324) 18
    GTEQ (325) 19
    LTEQ (326) 20
    COLON (327) 34 57
    LPAREN (328) 33 41
    RPAREN (329) 33 41
    LBRACK (330)
    RBRACK (331)
    LBRACE (332) 7 9 33
    RBRACE (333) 7 9 33
    SEMI (334) 42 52 53
    DOTDOT (335)
    DOT (336) 5
    COMMA (337) 38 51
    ASSIGN (338) 59
    REFER (339)
    ID (340) 4
    UNDERSCORE (341)
    HASH (342)
    ARROW (343) 40
    ICONST (344) 32 46 63
    FCONST (345) 31 45 62
    CCONST (346)
    STRING (347) 30 44 61


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    main (94)
        on left: 1 2 3
        on right: 0 2 3
    ident (95)
        on left: 4 5
        on right: 5 29 33 34 40 41 43 52 53 57 60
    if_expr (96)
        on left: 6
        on right: 65
    if_main (97)
        on left: 7
        on right: 6 11
    else_expr (98)
        on left: 8 9
        on right: 6
    else_if_expr (99)
        on left: 10 11
        on right: 6 11
    exprs (100)
        on left: 12 13 14
        on right: 7 13 14
    expr (101)
        on left: 15 16 17 18 19 20 21 22 23
        on right: 12 13 14 15 16 17 18 19 20
    expression (102)
        on left: 24 25 26 27 28
        on right: 15 16 17 18 19 20 21 24 25 26 27
    term (103)
        on left: 29 30 31 32
        on right: 24 25 26 27 28
    funDecr (104)
        on left: 33
        on right: 2
    param (105)
        on left: 34
        on right: 37 38
    maybeParamList (106)
        on left: 35 36
        on right: 33
    paramList (107)
        on left: 37 38
        on right: 36 38
    maybeFnReturn (108)
        on left: 39 40
        on right: 33
    funCall (109)
        on left: 41
        on right: 42 47
    funcCallStmt (110)
        on left: 42
        on right: 66
    callParam (111)
        on left: 43 44 45 46 47
        on right: 50 51
    maybeCallParamList (112)
        on left: 48 49
        on right: 41
    callParamList (113)
        on left: 50 51
        on right: 49 51
    varDec (114)
        on left: 52 53
        on right: 3 67
    maybeMut (115)
        on left: 54 55
        on right: 52
    maybeType (116)
        on left: 56 57
        on right: 52 53
    maybeAssign (117)
        on left: 58 59
        on right: 52 53
    var (118)
        on left: 60 61 62 63
        on right: 59
    block (119)
        on left: 64 65 66 67
        on right: 7 9 33 65 66 67


State 0

    0 $accept: . main $end

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_FN     shift, and go to state 2
    KEYWORD_STRICT_LET    shift, and go to state 3

    $default  reduce using rule 1 (main)

    main     go to state 4
    funDecr  go to state 5
    varDec   go to state 6


State 1

   53 varDec: KEYWORD_STRICT_CONST . ident maybeType maybeAssign SEMI

    ID  shift, and go to state 7

    ident  go to state 8


State 2

   33 funDecr: KEYWORD_STRICT_FN . ident LPAREN maybeParamList RPAREN maybeFnReturn LBRACE block RBRACE

    ID  shift, and go to state 7

    ident  go to state 9


State 3

   52 varDec: KEYWORD_STRICT_LET . maybeMut ident maybeType maybeAssign SEMI

    KEYWORD_STRICT_MUT  shift, and go to state 10

    $default  reduce using rule 54 (maybeMut)

    maybeMut  go to state 11


State 4

    0 $accept: main . $end

    $end  shift, and go to state 12


State 5

    2 main: funDecr . main

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_FN     shift, and go to state 2
    KEYWORD_STRICT_LET    shift, and go to state 3

    $default  reduce using rule 1 (main)

    main     go to state 13
    funDecr  go to state 5
    varDec   go to state 6


State 6

    3 main: varDec . main

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_FN     shift, and go to state 2
    KEYWORD_STRICT_LET    shift, and go to state 3

    $default  reduce using rule 1 (main)

    main     go to state 14
    funDecr  go to state 5
    varDec   go to state 6


State 7

    4 ident: ID .

    $default  reduce using rule 4 (ident)


State 8

    5 ident: ident . DOT ident
   53 varDec: KEYWORD_STRICT_CONST ident . maybeType maybeAssign SEMI

    COLON  shift, and go to state 15
    DOT    shift, and go to state 16

    $default  reduce using rule 56 (maybeType)

    maybeType  go to state 17


State 9

    5 ident: ident . DOT ident
   33 funDecr: KEYWORD_STRICT_FN ident . LPAREN maybeParamList RPAREN maybeFnReturn LBRACE block RBRACE

    LPAREN  shift, and go to state 18
    DOT     shift, and go to state 16


State 10

   55 maybeMut: KEYWORD_STRICT_MUT .

    $default  reduce using rule 55 (maybeMut)


State 11

   52 varDec: KEYWORD_STRICT_LET maybeMut . ident maybeType maybeAssign SEMI

    ID  shift, and go to state 7

    ident  go to state 19


State 12

    0 $accept: main $end .

    $default  accept


State 13

    2 main: funDecr main .

    $default  reduce using rule 2 (main)


State 14

    3 main: varDec main .

    $default  reduce using rule 3 (main)


State 15

   57 maybeType: COLON . ident

    ID  shift, and go to state 7

    ident  go to state 20


State 16

    5 ident: ident DOT . ident

    ID  shift, and go to state 7

    ident  go to state 21


State 17

   53 varDec: KEYWORD_STRICT_CONST ident maybeType . maybeAssign SEMI

    ASSIGN  shift, and go to state 22

    $default  reduce using rule 58 (maybeAssign)

    maybeAssign  go to state 23


State 18

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN . maybeParamList RPAREN maybeFnReturn LBRACE block RBRACE

    ID  shift, and go to state 7

    $default  reduce using rule 35 (maybeParamList)

    ident           go to state 24
    param           go to state 25
    maybeParamList  go to state 26
    paramList       go to state 27


State 19

    5 ident: ident . DOT ident
   52 varDec: KEYWORD_STRICT_LET maybeMut ident . maybeType maybeAssign SEMI

    COLON  shift, and go to state 15
    DOT    shift, and go to state 16

    $default  reduce using rule 56 (maybeType)

    maybeType  go to state 28


State 20

    5 ident: ident . DOT ident
   57 maybeType: COLON ident .

    DOT  shift, and go to state 16

    $default  reduce using rule 57 (maybeType)


State 21

    5 ident: ident . DOT ident
    5      | ident DOT ident .

    DOT  shift, and go to state 16

    DOT       [reduce using rule 5 (ident)]
    $default  reduce using rule 5 (ident)


State 22

   59 maybeAssign: ASSIGN . var

    ID      shift, and go to state 7
    ICONST  shift, and go to state 29
    FCONST  shift, and go to state 30
    STRING  shift, and go to state 31

    ident  go to state 32
    var    go to state 33


State 23

   53 varDec: KEYWORD_STRICT_CONST ident maybeType maybeAssign . SEMI

    SEMI  shift, and go to state 34


State 24

    5 ident: ident . DOT ident
   34 param: ident . COLON ident

    COLON  shift, and go to state 35
    DOT    shift, and go to state 16


State 25

   37 paramList: param .

    $default  reduce using rule 37 (paramList)


State 26

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList . RPAREN maybeFnReturn LBRACE block RBRACE

    RPAREN  shift, and go to state 36


State 27

   36 maybeParamList: paramList .
   38 paramList: paramList . COMMA param

    COMMA  shift, and go to state 37

    $default  reduce using rule 36 (maybeParamList)


State 28

   52 varDec: KEYWORD_STRICT_LET maybeMut ident maybeType . maybeAssign SEMI

    ASSIGN  shift, and go to state 22

    $default  reduce using rule 58 (maybeAssign)

    maybeAssign  go to state 38


State 29

   63 var: ICONST .

    $default  reduce using rule 63 (var)


State 30

   62 var: FCONST .

    $default  reduce using rule 62 (var)


State 31

   61 var: STRING .

    $default  reduce using rule 61 (var)


State 32

    5 ident: ident . DOT ident
   60 var: ident .

    DOT  shift, and go to state 16

    $default  reduce using rule 60 (var)


State 33

   59 maybeAssign: ASSIGN var .

    $default  reduce using rule 59 (maybeAssign)


State 34

   53 varDec: KEYWORD_STRICT_CONST ident maybeType maybeAssign SEMI .

    $default  reduce using rule 53 (varDec)


State 35

   34 param: ident COLON . ident

    ID  shift, and go to state 7

    ident  go to state 39


State 36

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN . maybeFnReturn LBRACE block RBRACE

    ARROW  shift, and go to state 40

    $default  reduce using rule 39 (maybeFnReturn)

    maybeFnReturn  go to state 41


State 37

   38 paramList: paramList COMMA . param

    ID  shift, and go to state 7

    ident  go to state 24
    param  go to state 42


State 38

   52 varDec: KEYWORD_STRICT_LET maybeMut ident maybeType maybeAssign . SEMI

    SEMI  shift, and go to state 43


State 39

    5 ident: ident . DOT ident
   34 param: ident COLON ident .

    DOT  shift, and go to state 16

    $default  reduce using rule 34 (param)


State 40

   40 maybeFnReturn: ARROW . ident

    ID  shift, and go to state 7

    ident  go to state 44


State 41

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN maybeFnReturn . LBRACE block RBRACE

    LBRACE  shift, and go to state 45


State 42

   38 paramList: paramList COMMA param .

    $default  reduce using rule 38 (paramList)


State 43

   52 varDec: KEYWORD_STRICT_LET maybeMut ident maybeType maybeAssign SEMI .

    $default  reduce using rule 52 (varDec)


State 44

    5 ident: ident . DOT ident
   40 maybeFnReturn: ARROW ident .

    DOT  shift, and go to state 16

    $default  reduce using rule 40 (maybeFnReturn)


State 45

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN maybeFnReturn LBRACE . block RBRACE

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_IF     shift, and go to state 46
    KEYWORD_STRICT_LET    shift, and go to state 3
    ID                    shift, and go to state 7

    $default  reduce using rule 64 (block)

    ident         go to state 47
    if_expr       go to state 48
    if_main       go to state 49
    funCall       go to state 50
    funcCallStmt  go to state 51
    varDec        go to state 52
    block         go to state 53


State 46

    7 if_main: KEYWORD_STRICT_IF . exprs LBRACE block RBRACE

    KEYWORD_STRICT_FALSE  shift, and go to state 54
    KEYWORD_STRICT_TRUE   shift, and go to state 55
    ID                    shift, and go to state 7
    ICONST                shift, and go to state 56
    FCONST                shift, and go to state 57
    STRING                shift, and go to state 58

    ident       go to state 59
    exprs       go to state 60
    expr        go to state 61
    expression  go to state 62
    term        go to state 63


State 47

    5 ident: ident . DOT ident
   41 funCall: ident . LPAREN maybeCallParamList RPAREN

    LPAREN  shift, and go to state 64
    DOT     shift, and go to state 16


State 48

   65 block: if_expr . block

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_IF     shift, and go to state 46
    KEYWORD_STRICT_LET    shift, and go to state 3
    ID                    shift, and go to state 7

    $default  reduce using rule 64 (block)

    ident         go to state 47
    if_expr       go to state 48
    if_main       go to state 49
    funCall       go to state 50
    funcCallStmt  go to state 51
    varDec        go to state 52
    block         go to state 65


State 49

    6 if_expr: if_main . else_if_expr else_expr

    $default  reduce using rule 10 (else_if_expr)

    else_if_expr  go to state 66


State 50

   42 funcCallStmt: funCall . SEMI

    SEMI  shift, and go to state 67


State 51

   66 block: funcCallStmt . block

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_IF     shift, and go to state 46
    KEYWORD_STRICT_LET    shift, and go to state 3
    ID                    shift, and go to state 7

    $default  reduce using rule 64 (block)

    ident         go to state 47
    if_expr       go to state 48
    if_main       go to state 49
    funCall       go to state 50
    funcCallStmt  go to state 51
    varDec        go to state 52
    block         go to state 68


State 52

   67 block: varDec . block

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_IF     shift, and go to state 46
    KEYWORD_STRICT_LET    shift, and go to state 3
    ID                    shift, and go to state 7

    $default  reduce using rule 64 (block)

    ident         go to state 47
    if_expr       go to state 48
    if_main       go to state 49
    funCall       go to state 50
    funcCallStmt  go to state 51
    varDec        go to state 52
    block         go to state 69


State 53

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN maybeFnReturn LBRACE block . RBRACE

    RBRACE  shift, and go to state 70


State 54

   23 expr: KEYWORD_STRICT_FALSE .

    $default  reduce using rule 23 (expr)


State 55

   22 expr: KEYWORD_STRICT_TRUE .

    $default  reduce using rule 22 (expr)


State 56

   32 term: ICONST .

    $default  reduce using rule 32 (term)


State 57

   31 term: FCONST .

    $default  reduce using rule 31 (term)


State 58

   30 term: STRING .

    $default  reduce using rule 30 (term)


State 59

    5 ident: ident . DOT ident
   29 term: ident .

    DOT  shift, and go to state 16

    $default  reduce using rule 29 (term)


State 60

    7 if_main: KEYWORD_STRICT_IF exprs . LBRACE block RBRACE

    LBRACE  shift, and go to state 71


State 61

   12 exprs: expr .
   13      | expr . ANDOP exprs
   14      | expr . OROP exprs

    OROP   shift, and go to state 72
    ANDOP  shift, and go to state 73

    $default  reduce using rule 12 (exprs)


State 62

   15 expr: expression . EQUOP expr
   16     | expression . NEQUOP expr
   17     | expression . GT expr
   18     | expression . LT expr
   19     | expression . GTEQ expr
   20     | expression . LTEQ expr
   21     | expression .

    EQUOP   shift, and go to state 74
    NEQUOP  shift, and go to state 75
    GT      shift, and go to state 76
    LT      shift, and go to state 77
    GTEQ    shift, and go to state 78
    LTEQ    shift, and go to state 79

    $default  reduce using rule 21 (expr)


State 63

   24 expression: term . MULOP expression
   25           | term . DIVOP expression
   26           | term . ADDOP expression
   27           | term . SUBOP expression
   28           | term .

    ADDOP  shift, and go to state 80
    SUBOP  shift, and go to state 81
    MULOP  shift, and go to state 82
    DIVOP  shift, and go to state 83

    $default  reduce using rule 28 (expression)


State 64

   41 funCall: ident LPAREN . maybeCallParamList RPAREN

    ID      shift, and go to state 7
    ICONST  shift, and go to state 84
    FCONST  shift, and go to state 85
    STRING  shift, and go to state 86

    $default  reduce using rule 48 (maybeCallParamList)

    ident               go to state 87
    funCall             go to state 88
    callParam           go to state 89
    maybeCallParamList  go to state 90
    callParamList       go to state 91


State 65

   65 block: if_expr block .

    $default  reduce using rule 65 (block)


State 66

    6 if_expr: if_main else_if_expr . else_expr
   11 else_if_expr: else_if_expr . KEYWORD_STRICT_ELSE if_main

    KEYWORD_STRICT_ELSE  shift, and go to state 92

    $default  reduce using rule 8 (else_expr)

    else_expr  go to state 93


State 67

   42 funcCallStmt: funCall SEMI .

    $default  reduce using rule 42 (funcCallStmt)


State 68

   66 block: funcCallStmt block .

    $default  reduce using rule 66 (block)


State 69

   67 block: varDec block .

    $default  reduce using rule 67 (block)


State 70

   33 funDecr: KEYWORD_STRICT_FN ident LPAREN maybeParamList RPAREN maybeFnReturn LBRACE block RBRACE .

    $default  reduce using rule 33 (funDecr)


State 71

    7 if_main: KEYWORD_STRICT_IF exprs LBRACE . block RBRACE

    KEYWORD_STRICT_CONST  shift, and go to state 1
    KEYWORD_STRICT_IF     shift, and go to state 46
    KEYWORD_STRICT_LET    shift, and go to state 3
    ID                    shift, and go to state 7

    $default  reduce using rule 64 (block)

    ident         go to state 47
    if_expr       go to state 48
    if_main       go to state 49
    funCall       go to state 50
    funcCallStmt  go to state 51
    varDec        go to state 52
    block         go to state 94


State 72

   14 exprs: expr OROP . exprs

    KEYWORD_STRICT_FALSE  shift, and go to state 54
    KEYWORD_STRICT_TRUE   shift, and go to state 55
    ID                    shift, and go to state 7
    ICONST                shift, and go to state 56
    FCONST                shift, and go to state 57
    STRING                shift, and go to state 58

    ident       go to state 59
    exprs       go to state 95
    expr        go to state 61
    expression  go to state 62
    term        go to state 63


State 73

   13 exprs: expr ANDOP . exprs
